--- a/_config.yml
+++ b/_config.yml
@@ -6,34 +6,34 @@ favicon: images/favicon.ico
 version: 2
 
 # Personal info
-name: Brett Harris
-title: Senior Network System Administrator
-email: brett.h@email.co.uk
-website: www.github.com/sproogen/resume-theme
+name: Ma. Victoria Demecillo
+title: Remote Desktop Engineer 
+email: mvdemecillo@gmail.com
+website: https://mvdemecillo.github.io/resume/
 
 # Dark Mode (true/false/never)
 darkmode: false
 
 # Social links
-twitter_username: facespics
-github_username:  sproogen
+#twitter_username: facespics
+#github_username:  sproogen
 # stackoverflow_username: "00000001"
 # dribbble_username: jekyll
 # facebook_username: jekyll
 # flickr_username: jekyll
-instagram_username: jameswgrant
-linkedin_username: jameswgrant
+#instagram_username: jameswgrant
+linkedin_username: mv-demecillo-663a59194
 # xing_username: jekyll
 # pinterest_username: jekyll
-youtube_username: globalmtb
+#youtube_username: globalmtb
 # googleplus_username: +jekyll
 # orcid_username: 0000-0000-0000-0000
 
 # Additional icon links
 additional_links:
-- title: itsgoingto.be
-  icon: fas fa-globe
-  url: https://www.itsgoingto.be
+#- title: itsgoingto.be
+#  icon: fas fa-globe
+#  url: https://www.itsgoingto.be
 # - title: another link
 #   icon: font awesome brand icon name (eg. fab fa-twitter) (https://fontawesome.com/icons?d=gallery&m=free)
 #   url: Link url (eg. https://google.com)
@@ -48,9 +48,10 @@ additional_links:
 # about_title: About Me
 about_profile_image: images/profile.jpg
 about_content: | # this will include new lines to allow paragraphs
-  Hi, my name's Brett and I'm a senior network system administrator. As well as administrating systems I also have experience making software and web apps. I have worked at a number of companies gaining teamwork and leadership skills.
+  Hi, I am Ma. Victoria and I'm a remote desktop engineer. I work as a remote technical assistant and service operations support, acting as an escalation from other support teams.
 
-  I am most skilled in: <mark>AWS</mark> and <mark>Eating Pizza</mark>
+ I am most skilled in: <mark>Exchange</mark>, <mark>Networking</mark>, <mark>Storage</mark>, <mark>Desktop Management Windows 7 and 10</mark>, <mark>Active Directory</mark>, <mark>Azure AD</mark>, <mark>Citrix</mark>
+
 
 content:
   - title: Projects # Title for the section
