--- a/_config.yml
+++ b/_config.yml
@@ -49,9 +49,9 @@ linkedin_username: mv-demecillo-663a59194
 # about_title: About Me
 about_profile_image: images/profile.jpg
 about_content: | # this will include new lines to allow paragraphs
-  Hi, my name's Brett and I'm a senior network system administrator. As well as administrating systems I also have experience making software and web apps. I have worked at a number of companies gaining teamwork and leadership skills.
+  Hi, I am Ma. Victoria and I'm a remote desktop engineer. I work as a remote technical assistant and service operations support, acting as an escalation from other support teams.
 
-  I am most skilled in: <mark>AWS</mark> and <mark>Eating Pizza</mark>
+  I am most skilled in: <mark>Exchange</mark>, <mark>Networking</mark>, <mark>Storage</mark>, <mark>Desktop Management Windows 7 and 10</mark>, <mark>Active Directory</mark>, <mark>Azure AD</mark>, <mark>Citrix</mark>
 
 content:
   - title: Projects # Title for the section
