--- a/_config.yml
+++ b/_config.yml
@@ -74,7 +74,7 @@ content:
     
 
   - title: Experience # Title for the section
-    layout: list # Type of content section (list/text)
+    layout: text # Type of content section (list/text)
     content:
       - layout: left
         title: ATOS - SYNTEL
@@ -104,6 +104,7 @@ content:
             - Owns escalated Incidents from L1/RTA support teams, get daily updates from SMEs, understand the situation, escalate, if necessary, to keep the ball rolling and provide updates to the end users.
             - Provide VIP end-users support acting as their champion and owning the request or incident to completion
 
+    content:
      - layout: left
         title: CGI Philippines
         link: https://www.cgi.com/philippines/en
@@ -124,6 +125,7 @@ content:
           - 3 months after doing front liner tasks, I was assigned to handle Quality Assurance responsibilities for almost a year. Then moved to Queue Management handling ticket escalations and backlogs. I also did ADHOC tasks such as sending reports to higher opts and clients.
           - Last task given was a backup of our team's Workforce Analyst
 
+    content:
      - layout: left
         title: Cognizant Philippines
         link: https://www.cognizant.com/ph/en
@@ -137,6 +139,7 @@ content:
           - Handles mostly MS Outlook and AD account concerns.  
           - Triage for client specific applications.  
 
+    content:
       - layout: left
         title: Stefanini Philippines 
         link: https://stefanini.com/en/philippines
@@ -152,7 +155,8 @@ content:
           - Responsible for setting up corporate emails on user's mobile phones (iPhone and Blackberry), authentication support, and desktop related concerns.
           - Handles internal/corporate application support, account administration and password resets, vpn issues for home-based users, and mobile device management.
           - After meticulously exhausting level1 troubleshooting steps, escalate tickets to the appropriate Level 2 technical group for further assistance and permanent resolution.
-
+  
+    content:
       - layout: left
         title: TeleTech Inc. 
         link: https://www.ttec.com/
