--- a/_config.yml
+++ b/_config.yml
@@ -77,6 +77,7 @@ content:
     layout: list # Type of content section (list/text)
     content:
       - layout: left
+        border: weak
         title: ATOS - SYNTEL
         link: https://www.linkedin.com/company/atos-syntel
         link_text: ATOS SYNTEL on LinkedIn
